Attempt to fix sidebar flickering

--- a/styles/sass/partials/_sidebar-ui.scss
+++ b/styles/sass/partials/_sidebar-ui.scss
@@ -551,7 +551,7 @@
 }
 
 #sidebar-ui .sidebar-panel.expanded .sidebar-panel-content {
-	height: 100%;
+	height: 300px;
 	padding: 0;
 	border-top: 1px solid #accae6;
 	/* border-bottom: 1px solid #accae6; */
